Squashed commit of the following:
commit d59f4b591d9a0ae930976bc96b7bd2bf6aee6eef
Author: blckclov3r <blckclov3r@gmail.com>
Date:   Sun Apr 7 15:34:38 2024 +0800

    update utility, validate, package.json and README.md

commit 0ae968a20bd56e703e6901637f401557848f1c2c
Author: blckclov3r <blckclov3r@gmail.com>
Date:   Sun Apr 7 14:45:06 2024 +0800

    separate utility and validate

commit 8d506ad3dad895820cfd822cdcc34cfa91766bb1
Author: blckclov3r <blckclov3r@gmail.com>
Date:   Sun Apr 7 00:56:07 2024 +0800

    update readme and add utilities

commit 582c83cafd804e822291ec40084a9f7fd29cbefc
Author: blckclov3r <blckclov3r@gmail.com>
Date:   Sun Mar 31 05:44:46 2024 +0800

    package.json

--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
-  "name": "utilities",
-  "version": "1.0.0",
-  "description": "This package does not offer any useful code or functionality at the moment. Please refrain from installing it for now.",
+  "name": "utility-validate",
+  "version": "1.0.2",
+  "description": "A collection of validators, sanitizers, and utilities.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "homepage": "https://github.com/blckclov3r/utilities#readme",
+  "homepage": "https://github.com/blckclov3r/utility-validate#readme",
   "keywords": [
     "utilities",
+    "validator",
     "validation",
+    "validate",
     "utility",
     "library",
-    "sanitization",
-    "assertion",
     "validity",
     "hooks",
-    "functions",
-    "verification",
-    "helpers",
-    "tools"
+    "util",
+    "utils",
+    "sha256",
+    "sha1",
+    "sha512",
+    "sha384",
+    "hash",
+    "hex",
+    "hash",
+    "sanitize",
+    "santise"
   ],
   "author": "blckclov3r",
   "license": "MIT",
   "repository": {
-    "url": "git+https://github.com/blckclov3r/utilities.git"
+    "url": "git+https://github.com/blckclov3r/utility-validate.git"
   },
   "bugs": {
-    "url": "https://github.com/blckclov3r/utilities/issues",
+    "url": "https://github.com/blckclov3r/utility-validate/issues",
     "email": "blckclov3r@gmail.com"
   },
   "devDependencies": {
     "@swc/core": "^1.4.11",
+    "@types/node": "^20.12.5",
     "terser": "^5.29.2",
     "tsup": "^8.0.2",
     "typescript": "^5.4.3"
